--- a/new/index.html
+++ b/new/index.html
@@ -17,31 +17,25 @@
     />
 
     <!-- Favicons -->
-    -
     <link
       rel="apple-touch-icon"
-      href="/docs/5.1/assets/img/favicons/apple-touch-icon.png"
+      href="./assets/icon/logo192.png"
       sizes="180x180"
     />
     <link
       rel="icon"
-      href="/docs/5.1/assets/img/favicons/favicon-32x32.png"
+      href="./assets/icon/logo192.png"
       sizes="32x32"
       type="image/png"
     />
     <link
       rel="icon"
-      href="/docs/5.1/assets/img/favicons/favicon-16x16.png"
+      href="./assets/icon/logo192.png"
       sizes="16x16"
       type="image/png"
     />
-    <link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json" />
-    <link
-      rel="mask-icon"
-      href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg"
-      color="#7952b3"
-    />
-    <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico" />
+
+    <link rel="icon" href="./assets/icon/logo192.png" />
     <meta name="theme-color" content="#d1dae7" />
 
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
@@ -188,7 +182,7 @@
       "
     >
       <a
-        href="/"
+        href="#"
         class="
           d-flex
           align-items-center
@@ -210,9 +204,9 @@
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
             競技プログラミング専用ツールHisuiを使って、競プロもっと楽しもう<br />
-            競プロ向けにカスタマイズされたエディター<br />
-            順位や時間などの必要な情報をすぐに手に入れられるダッシュボード<br />
-            競プロに役立つさまざまな機能が備わっています
+            競プロ向けにカスタマイズされたエディター、順位や時間などの必要な情報をすぐに手に入れられるダッシュボード、
+            競プロに役立つさまざまな機能が備わっています<br />
+            複雑な設定なしでインストールしたらすぐに使えます
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <a
@@ -220,7 +214,7 @@
               type="button"
               class="btn btn-primary btn-lg px-4 me-sm-3"
             >
-              ダウンロード
+              α版テストに参加する
             </a>
             <a
               href="https://adenohitu.github.io/Hisui-docs/"
@@ -231,7 +225,7 @@
             </a>
           </div>
           <p class="text-muted mb-0 mt-2 mb-3">
-            最新版:<strong>近日α版公開予定</strong>
+            最新版:<strong>α版テスト中</strong>
           </p>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh">
@@ -283,7 +277,9 @@
                     初めての方でも直感的に使うことができます<br
                   /></span>
                 </p>
-                <a href="#" class="btn btn-outline-secondary">詳しく見る</a>
+                <a href="#editor-feature" class="btn btn-outline-secondary"
+                  >詳しく見る</a
+                >
               </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -311,7 +307,9 @@
                     >ランキング情報を直感的に見ることのできるダッシュボード</span
                   ><br />コンテスト中に必要な情報だけを選択して素早く確認することができます
                 </p>
-                <a href="#" class="btn btn-outline-secondary">詳しく見る</a>
+                <a href="#dashboard-feature" class="btn btn-outline-secondary"
+                  >詳しく見る</a
+                >
               </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -331,7 +329,12 @@
                   /></span>
                   コードをGithubといったサービスにあげてすぐに共有することもできます
                 </p>
-                <a href="#" class="btn btn-outline-secondary">詳しく見る</a>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary disabled"
+                  aria-disabled="true"
+                  >Comming Soon...</a
+                >
               </div>
             </div>
           </div>
@@ -359,7 +362,9 @@
                   ><br />
                   テストを素早く正確に実行するための機能が備わっています
                 </p>
-                <a href="#" class="btn btn-outline-secondary">詳しく見る</a>
+                <a href="#test-feature" class="btn btn-outline-secondary"
+                  >詳しく見る</a
+                >
               </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -383,7 +388,12 @@
                     >制約を入力し新たなテストケース生成を生成</span
                   ><br />公開されていないテストケース生成も試すことでバグなどに気付くことができます
                 </p>
-                <a href="#" class="btn btn-outline-secondary">詳しく見る</a>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary disabled"
+                  aria-disabled="true"
+                  >Comming Soon...</a
+                >
               </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -400,7 +410,12 @@
                   ><br />
                   テンプレートを使ってすぐに作り始められます<br />作った機能はマーケットを通して公開することでいろんな人に使ってもらえます
                 </p>
-                <a href="#" class="btn btn-outline-secondary">詳しく見る</a>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary disabled"
+                  aria-disabled="true"
+                  >Comming Soon...</a
+                >
               </div>
             </div>
           </div>
@@ -409,111 +424,75 @@
 
         <hr class="featurette-divider" />
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">
-              First featurette heading.
-              <span class="text-muted">It’ll blow your mind.</span>
-            </h2>
+        <div
+          id="editor-feature"
+          class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center"
+        >
+          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <h1 class="display-4 fw-bold lh-1">
+              競プロのために最適化されたエディター
+            </h1>
             <p class="lead">
-              Some great placeholder content for the first featurette here.
-              Imagine some exciting prose here.
+              VSCodeのエディターコアとして使われているMonacoEditorを採用<br />
+              初めての方でも直感的に使うことができます。<br />
+              Snippetなどのコード補完機能も充実しています。
             </p>
           </div>
-          <div class="col-md-5">
-            <svg
-              class="
-                bd-placeholder-img bd-placeholder-img-lg
-                featurette-image
-                img-fluid
-                mx-auto
-              "
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee" />
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
+            <img
+              class="feature-img shadow-lg rounded-lg-3"
+              src="./assets/img/feature/editor-screen-1.png"
+              alt=""
+              width="600"
+            />
           </div>
         </div>
 
         <hr class="featurette-divider" />
 
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">
-              Oh yeah, it’s that good.
-              <span class="text-muted">See for yourself.</span>
-            </h2>
+        <div
+          id="dashboard-feature"
+          class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center"
+        >
+          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <h1 class="display-4 fw-bold lh-1">必要な情報だけをすぐに</h1>
             <p class="lead">
-              Another featurette? Of course. More placeholder content here to
-              give you an idea of how this layout would work with some actual
-              real-world content in place.
+              VSCodeのエディターコアとして使われているMonacoEditorを採用<br />
+              初めての方でも直感的に使うことができます。<br />
+              Snippetなどのコード補完機能も充実しています。
             </p>
           </div>
-          <div class="col-md-5 order-md-1">
-            <svg
-              class="
-                bd-placeholder-img bd-placeholder-img-lg
-                featurette-image
-                img-fluid
-                mx-auto
-              "
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee" />
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
+            <img
+              class="feature-img shadow-lg rounded-lg-3"
+              src="./assets/img/feature/dashboard-screen-1.png"
+              alt=""
+              width="600"
+            />
           </div>
         </div>
 
         <hr class="featurette-divider" />
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">
-              And lastly, this one. <span class="text-muted">Checkmate.</span>
-            </h2>
+        <div
+          id="test-feature"
+          class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center"
+        >
+          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <h1 class="display-4 fw-bold lh-1">テストしてすぐ提出</h1>
             <p class="lead">
-              And yes, this is the last block of representative placeholder
-              content. Again, not really intended to be actually read, simply
-              here to give you a better view of what this would look like with
-              some actual content. Your content.
+              VSCodeのエディターコアとして使われているMonacoEditorを採用<br />
+              初めての方でも直感的に使うことができます。<br />
+              Snippetなどのコード補完機能も充実しています。
             </p>
           </div>
-          <div class="col-md-5">
-            <svg
-              class="
-                bd-placeholder-img bd-placeholder-img-lg
-                featurette-image
-                img-fluid
-                mx-auto
-              "
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee" />
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
+            <img
+              class="feature-img shadow-lg rounded-lg-3"
+              src="./assets/img/feature/test-screen-1.png"
+              alt=""
+              width="600"
+            />
           </div>
         </div>
 
